package data

import (
	"backend-service/app/avmc/admin/internal/biz"
	"context"

	"github.com/go-kratos/kratos/v2/log"

	pb "backend-service/api/avmc/admin/v1"
)

// AuthRepo 数据仓库结构体
// 包含日志记录器
type authRepo struct {
	data *Data
	log  *log.Helper
	atr  *authTokenRepo
}

// NewAuthRepo 创建新的用户数据仓库实例
// 参数：logger 日志记录器
// 返回值：用户数据仓库实例指针
func NewAuthRepo(data *Data, atr *authTokenRepo, logger log.Logger) biz.AuthRepo {
	return &authRepo{
		data: data,
		log:  log.NewHelper(logger),
		atr:  atr,
	}
}

// Login 处理后台登录数据操作
// 参数：ctx 上下文，name 用户名，password 密码
// 返回值：登录响应结构体，错误信息
func (r *authRepo) Login(ctx context.Context, name, password string) (*pb.LoginResponse, error) {
	// 这里实现具体的登录数据操作
	r.log.Infof("尝试登录数据操作，用户名：%s", name)
	return &pb.LoginResponse{
		AccessToken:  "",
		RefreshToken: "",
	}, nil
}

// RefreshToken 处理刷新令牌数据操作
// 参数：ctx 上下文，refreshToken 刷新令牌
// 返回值：刷新令牌响应结构体，错误信息
func (r *authRepo) RefreshToken(ctx context.Context, refreshToken string) (*pb.RefreshTokenResponse, error) {
	// 这里实现具体的刷新令牌数据操作
	r.log.Infof("尝试刷新令牌数据操作，刷新令牌：%s", refreshToken)
	return &pb.RefreshTokenResponse{
		AccessToken:  "",
		RefreshToken: "",
	}, nil
}

// Logout 处理后台登出数据操作
// 参数：ctx 上下文，accessToken 访问令牌
// 返回值：错误信息
func (r *authRepo) Logout(ctx context.Context, accessToken string) error {
	// 这里实现具体的登出数据操作
	r.log.Infof("尝试登出数据操作，访问令牌：%s", accessToken)
	return nil
}

// Register 处理注册数据操作
// 参数：ctx 上下文，name 用户名，password 密码
// 返回值：错误信息
func (r *authRepo) Register(ctx context.Context, name, password string) error {
	// 这里实现具体的注册数据操作
	r.log.Infof("尝试注册数据操作，用户名：%s", name)
	return nil
}
